dev/manifests/cluster-config/apps.ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    cert-injector.mheuser.github.com/enabled: "true"
