dev/manifests/cluster-config/mutating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "cert-injector.mheuser.github.com"
webhooks:
  - name: "cert-injector.mheuser.github.com"
    namespaceSelector:
      matchLabels:
        com.github.mheuser/cert-injector-enabled: "true"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
    clientConfig:
      service:
        namespace: cert-injector
        name: cert-injector-webhook
        path: /mutate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0NRQ0JDZElOZG9TSW9UQU5CZ2tx
[...]
        LS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo=
